# pyfy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
pyfy/: sheets.py
