[tool.poetry]
name = "pyfy"
version = "0.1.0"
description = "Python Finance"
authors = ["Wayne Moorefield <wayne.moorefield@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
